--- a/demo.html
+++ b/demo.html
@@ -25,7 +25,7 @@
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <!-- <script src="https://cdn.pubnub.com/pubnub-3.7.14.min.js"></script> -->
-<script src="js/pubnub.js">
+<script src="pubnub.js">
 <script src="https://cdn.pubnub.com/webrtc/webrtc.js"></script>
 <script src="https://cdn.pubnub.com/webrtc/rtc-controller.js"></script>
 <script type="text/javascript">
