--- a/demo.html
+++ b/demo.html
@@ -725,7 +725,7 @@
                     Ea = a.secret_key || "",
                     ib = a.hmac_SHA256,
                     ua = a.ssl ? "s" : "",
-                    ka = "https" + ua + "://" + (a.origin || "pubsub.pubnub.com"),
+                    ka = "http" + ua + "://" + (a.origin || "pubsub.pubnub.com"),
                     O = na(ka),
                     jb = na(ka),
                     V = [],
