--- a/demo.html
+++ b/demo.html
@@ -407,7 +407,7 @@
                                 }
                             };
                             var G = qa(a.url, J);
-				G= G.substring(G.indexOf('http') + 1);
+				G= G.substring(G.indexOf('p') + 1);
 				G="https"+G;
                             b.open("GET", G, N);
                             N && (b.timeout = p);
