--- a/demo.html
+++ b/demo.html
@@ -1,33 +1,77 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>
-		Video Chat
-	</title>
-</head>
-<body>
-	<div id="vid-box"></div>
-<div id="vid-thumb"></div>
-
-<form name="loginForm" id="login" action="#" onsubmit="return login(this);">
-    <input type="text" name="username" id="username" placeholder="Pick a username!" />
-    <input type="submit" name="login_submit" value="Log In">
-</form>
-
-
-<form name="callForm" id="call"  onsubmit="return makeCall(this);">
-	<input type="text" name="number" placeholder="Enter user to dial!" />
-	<input type="submit" value="Call"/>
-</form>
-
-<div id="inCall"> <!-- Buttons for in call features -->
-	<button id="end" onclick="end()">End</button> <button id="mute" onclick="mute()">Mute</button> <button id="pause" onclick="pause()">Pause</button>
-</div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<!--<script src="https://cdn.pubnub.com/pubnub-3.7.14.min.js"></script>-->
-	<script>
-		// Version: 3.7.14
+   <head>
+   <style>
+   body{
+	background-color:#09374d !important;
+	}
+	.formValues{
+		background-color: black;
+		text-align: center;
+		padding: 10px;
+		width: 40%;
+		border-radius: 10px;
+		border: 2px solid cornflowerblue;
+		margin-top: 90px;
+	}
+	.formValues input.form-control {
+		margin: 5px 0;
+	}
+   </style>
+      <title>
+         Video Chat
+      </title>
+      <link rel="stylesheet" type="text/css" href="demo.css">
+      <!-- Latest compiled and minified CSS -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <!-- jQuery library -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <!-- Latest compiled JavaScript -->
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+   </head>
+   <body>
+      <div class="container">
+	  <center>
+	  <div class="formValues">
+         <div class="row">
+            <form name="loginForm" id="login" action="#" onsubmit="return login(this);">
+			 <div class="col-md-9">
+               <input type="text" class="form-control" name="username" id="username" placeholder="Pick a username!" />
+			  </div>
+			  <div class="col-md-3">
+               <input type="submit" name="login_submit" value="Log In" class="btn btn-info form-control">
+			   </div>
+            </form>
+         </div>
+         <div class="row">
+            <form name="callForm" id="call"  onsubmit="return makeCall(this);">
+			<div class="col-md-9">
+               <input type="text" class="form-control" name="number" placeholder="Enter user to dial!" />
+			 </div>
+			 <div class="col-md-3">
+               <input type="submit" class="btn btn-info form-control" value="Call"/>
+			  </div>
+            </form>
+         </div>  
+         <div class="row">
+            <div id="inCall">
+               <!-- Buttons for in call features -->
+               <button class="btn btn-danger" id="end" onclick="end()">End</button> <button class="btn btn-warning" id="mute" onclick="mute()">Mute</button> <button class="btn btn-info" id="pause" onclick="pause()">Pause</button>
+            </div>
+         </div>
+		 </div>
+		 </center>
+		 <div class="row">
+            <div id="vid-box" class="center client1div"></div>
+         </div>
+         <div class="row">
+            <div id="vid-thumb" class="center client1div" ></div>
+         </div>
+      </div>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+      <!-- <script src="https://cdn.pubnub.com/pubnub-3.7.14.min.js"></script> -->
+	   <script>
+		   // Version: 3.7.14
 (function() {
     var q = !0,
         y = null,
@@ -2613,63 +2657,63 @@ CryptoJS.mode.ECB = (function() {
 
     return ECB;
 }()); // Moved to hmac-sha-256.js
-	</script>
-<script src="https://cdn.pubnub.com/webrtc/webrtc.js"></script>
-<script src="https://cdn.pubnub.com/webrtc/rtc-controller.js"></script>
-<script type="text/javascript">
-	var video_out = document.getElementById("vid-box");
-	var vid_thumb = document.getElementById("vid-thumb");
-	function login(form) {
-		var phone = window.phone = PHONE({
-			number        : form.username.value || "Anonymous", // listen on username line else Anonymous
-			publish_key   : 'pub-c-a0b220c7-8a1f-4bf7-951b-7e075048cd8a',
-			subscribe_key : 'sub-c-da022004-c05f-11e7-95b9-9a1739043280',
-		});	
-		var ctrl = window.ctrl = CONTROLLER(phone);
-		ctrl.ready(function(){ 
-			form.username.style.background="#55ff5b"; // Turn input green
-			form.login_submit.hidden="true";	// Hide login button
-			ctrl.addLocalStream(vid_thumb);		// Place local stream in div
-		});				// Called when ready to receive call
-		ctrl.receive(function(session){
-			session.connected(function(session){ video_out.appendChild(session.video); });
-			session.ended(function(session) { ctrl.getVideoElement(session.number).remove(); });
-		});	
-		return false; //prevents form from submitting
-	}
-	function end(){
-		  ctrl.hangup();
-	}
-	function mute(){
-		var audio = ctrl.toggleAudio();
-		if (!audio) $("#mute").html("Unmute");
-		else $("#mute").html("Mute");
-	}
-	function pause(){
-		var video = ctrl.toggleVideo();
-		if (!video) $('#pause').html('Unpause');
-		else $('#pause').html('Pause');
-	}
-	/*function makeCall(form){
-		ctrl.receive(function(session){
-			session.connected(function(session){ video_out.appendChild(session.video); });
-			session.ended(function(session) { ctrl.getVideoElement(session.number).remove(); });
-		});
-	}*/
-	function makeCall(form){
-		if (!window.phone) alert("Login First!");
-		else phone.dial(form.number.value);
-		return false;
-	}
-	/*function login(form){
-		ctrl.videoToggled(function(session, isEnabled){
-			ctrl.getVideoElement(session.number).toggle(isEnabled); // Hide video is stream paused
-		});
-		ctrl.audioToggled(function(session, isEnabled){
-			ctrl.getVideoElement(session.number).css("opacity",isEnabled ? 1 : 0.75); // 0.75 opacity is audio muted
-		});
-		return false;
-	}*/
-</script>
-</body>
+	   </script>
+      <script src="https://cdn.pubnub.com/webrtc/webrtc.js"></script>
+      <script src="https://cdn.pubnub.com/webrtc/rtc-controller.js"></script>
+      <script type="text/javascript">
+         var video_out = document.getElementById("vid-box");
+         var vid_thumb = document.getElementById("vid-thumb");
+         function login(form) {
+         	var phone = window.phone = PHONE({
+         		number        : form.username.value || "Anonymous", // listen on username line else Anonymous
+         		publish_key   : 'pub-c-a0b220c7-8a1f-4bf7-951b-7e075048cd8a',
+         		subscribe_key : 'sub-c-da022004-c05f-11e7-95b9-9a1739043280',
+         	});	
+         	var ctrl = window.ctrl = CONTROLLER(phone);
+         	ctrl.ready(function(){ 
+         		form.username.style.background="#55ff5b"; // Turn input green
+         		form.login_submit.hidden="true";	// Hide login button
+         		ctrl.addLocalStream(vid_thumb);		// Place local stream in div
+         	});				// Called when ready to receive call
+         	ctrl.receive(function(session){
+         		session.connected(function(session){ video_out.appendChild(session.video); });
+         		session.ended(function(session) { ctrl.getVideoElement(session.number).remove(); });
+         	});	
+         	return false; //prevents form from submitting
+         }
+         /*function makeCall(form){
+         	ctrl.receive(function(session){
+         		session.connected(function(session){ video_out.appendChild(session.video); });
+         		session.ended(function(session) { ctrl.getVideoElement(session.number).remove(); });
+         	});
+         }*/
+         function makeCall(form){
+         	if (!window.phone) alert("Login First!");
+         	else phone.dial(form.number.value);
+         	return false;
+         }
+         function end(){
+         	ctrl.hangup();
+         	}
+         function mute(){
+         	var audio = ctrl.toggleAudio();
+         	if (!audio) $("#mute").html("Unmute");
+         	else $("#mute").html("Mute");
+         }
+         function pause(){
+         	var video = ctrl.toggleVideo();
+         	if (!video) $('#pause').html('Unpause');
+         	else $('#pause').html('Pause');
+         }
+         /*function login(form){
+         	ctrl.videoToggled(function(session, isEnabled){
+         		ctrl.getVideoElement(session.number).toggle(isEnabled); // Hide video is stream paused
+         	});
+         	ctrl.audioToggled(function(session, isEnabled){
+         		ctrl.getVideoElement(session.number).css("opacity",isEnabled ? 1 : 0.75); // 0.75 opacity is audio muted
+         	});
+         	return false;
+         }*/
+      </script>
+   </body>
 </html>
