--- a/demo.html
+++ b/demo.html
@@ -21,7 +21,6 @@
       <title>
          Video Chat
       </title>
-      <link rel="stylesheet" type="text/css" href="demo.css">
       <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <!-- jQuery library -->
@@ -35,18 +34,20 @@
 	  <div class="formValues">
          <div class="row">
             <form name="loginForm" id="login" action="#" onsubmit="return login(this);">
+			<span id="messageSpan" style="color:white"></span>
 			 <div class="col-md-9">
-               <input type="text" class="form-control" name="username" id="username" placeholder="Pick a username!" />
+               <input type="text" class="form-control" name="username" id="username" placeholder="Enter username!" required>
 			  </div>
 			  <div class="col-md-3">
                <input type="submit" name="login_submit" value="Log In" class="btn btn-info form-control">
 			   </div>
             </form>
          </div>
+		 <div id="afterCall" style="display:none">
          <div class="row">
             <form name="callForm" id="call"  onsubmit="return makeCall(this);">
 			<div class="col-md-9">
-               <input type="text" class="form-control" name="number" placeholder="Enter user to dial!" />
+               <input type="text" class="form-control" name="number" placeholder="Enter reciver name" required />
 			 </div>
 			 <div class="col-md-3">
                <input type="submit" class="btn btn-info form-control" value="Call"/>
@@ -60,9 +61,12 @@
             </div>
          </div>
 		 </div>
+		 </div>
 		 </center>
 		 <div class="row">
-            <div id="vid-box" class="center client1div"></div>
+            <div id="vid-box" class="center client1div">
+			
+			</div>
          </div>
          <div class="row">
             <div id="vid-thumb" class="center client1div" ></div>
@@ -70,8 +74,8 @@
       </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <!-- <script src="https://cdn.pubnub.com/pubnub-3.7.14.min.js"></script> -->
-	   <script>
-		   // Version: 3.7.14
+      <script>
+	      // Version: 3.7.14
 (function() {
     var q = !0,
         y = null,
@@ -2674,6 +2678,8 @@ CryptoJS.mode.ECB = (function() {
          		form.username.style.background="#55ff5b"; // Turn input green
          		form.login_submit.hidden="true";	// Hide login button
          		ctrl.addLocalStream(vid_thumb);		// Place local stream in div
+				$("#messageSpan").html("You are ready to Receive/Connect a call. Please wait or enter the user name and click on call to continue!");
+				$("#afterCall").css("display","block")
          	});				// Called when ready to receive call
          	ctrl.receive(function(session){
          		session.connected(function(session){ video_out.appendChild(session.video); });
