--- a/demo.html
+++ b/demo.html
@@ -2,8 +2,9 @@
 <html>
    <head>
    <style>
-   body{
-	background-color:#09374d !important;
+	body
+	{
+		background-color:#09374d !important;
 	}
 	.formValues{
 		background-color: black;
@@ -17,6 +18,18 @@
 	.formValues input.form-control {
 		margin: 5px 0;
 	}
+	#navBar{
+		height: 60px;
+		border-bottom: 4px solid #314D68;
+		background: #000507;
+	}
+	#navBar p{
+		color: #fff;
+		padding: 9px 0;
+		font-size: 30px;
+		font-weight: bold;
+		font-family: -webkit-body
+	}
    </style>
       <title>
          Video Chat
@@ -29,7 +42,12 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    </head>
    <body>
-      <div class="container">
+   <div id="navBar">
+	   <p>
+			Video Calling Application
+	   </p>
+   <div>
+<div class="container">
 	  <center>
 	  <div class="formValues">
          <div class="row">
