--- a/demo.html
+++ b/demo.html
@@ -30,6 +30,13 @@
 		font-weight: bold;
 		font-family: -webkit-body
 	}
+	.client1div{
+		margin:0 auto;
+	}
+	.client2div{
+		min-height:50%;
+		margin:0 auto;
+	}
    </style>
       <title>
          Video Chat
@@ -47,7 +54,7 @@
 			Video Calling Application
 	   </p>
    <div>
-<div class="container">
+      <div class="container">
 	  <center>
 	  <div class="formValues">
          <div class="row">
@@ -82,13 +89,17 @@
 		 </div>
 		 </center>
 		 <div class="row">
-            <div id="vid-box" class="center client1div">
-			
+			 <div class="col-md-3">
+					<div id="vid-box" class="client1div">
+					
+					</div>
+			 </div>
+			<div class="col-md-12">
+					<div id="vid-thumb" class="client2div" >
+					
+					</div>
 			</div>
-         </div>
-         <div class="row">
-            <div id="vid-thumb" class="center client1div" ></div>
-         </div>
+		 </div>
       </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <!-- <script src="https://cdn.pubnub.com/pubnub-3.7.14.min.js"></script> -->
