--- a/demo.html
+++ b/demo.html
@@ -34,7 +34,14 @@
 		margin:0 auto;
 	}
 	.client2div{
+		min-height:50%;
 		margin:0 auto;
+	}
+	.client1div video{
+		width: 100%;
+	}
+	.client2div video{
+		width: 100%;
 	}
    </style>
       <title>
